--- a/templates/accounts/registration.html
+++ b/templates/accounts/registration.html
@@ -34,7 +34,7 @@
                         </div>
                         <div class="col-lg-6 form-group">
                             <button type="submit" value="submit"
-                                    class="btn subs_btn form-control">Зарегистрироваться
+                                    class="btn subs_btn form-control btn-success">Зарегистрироваться
                             </button>
                         </div>
                     </form>
