--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -17,19 +17,19 @@
                         {% endif %}
                     </div>
                     <form action="." method="post" class="login_form row">{% csrf_token %}
-                        <div class="col-lg-6 form-group">
+                        <div class="col-lg-4 form-group">
                             <input required type="text" class="form-control"
                                    name="{{ form.username.name }}"
                                    placeholder="Ваш логин">
                         </div>
-                        <div class="col-lg-6 form-group">
+                        <div class="col-lg-4 form-group">
                             <input required type="password" class="form-control"
                                    name="{{ form.password.name }}"
                                    placeholder="Пароль">
                         </div>
-                        <div class="col-lg-6 form-group">
+                        <div class="col-lg-2 form-group">
                             <input type="hidden" name="next" value="{{ next }}" />
-                            <button type="submit" value="submit" class="btn subs_btn form-control">Войти</button>
+                            <button type="submit" value="submit" class="btn subs_btn form-control btn-success">Войти</button>
                         </div>
                         <div class="col-lg-12 form-group centered">
                             <div class="creat_account">
@@ -41,5 +41,6 @@
             </div>
         </div>
     </div>
+<a href="{% url 'accounts:social:begin' 'github' %}">Login with Github</a> <br/>
 </section>
 {% endblock content %}
