--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -41,6 +41,6 @@
             </div>
         </div>
     </div>
-<a href="{% url 'accounts:social:begin' 'github' %}">Login with Github</a> <br/>
+<a href="{% url 'social:begin' 'github' %}">Login with Github</a> <br/>
 </section>
 {% endblock content %}
