--- a/templates/accounts/register_failed.html
+++ b/templates/accounts/register_failed.html
@@ -3,10 +3,9 @@
 
 {% block content %}
 <!-- register failed -->
-<section class="emty_cart_area p_100">
+<section>
     <div class="container">
-        <div class="emty_cart_inner">
-            <i class="icon-user icons"></i>
+        <div>
             <h3>Регистрация аккаунта не прошла</h3>
             <h4>попробуйте заново пройти <a href="{% url 'accounts:register' %}">регистрацию</a></h4>
         </div>
