--- a/templates/accounts/registration.html
+++ b/templates/accounts/registration.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <!-- registration -->
-<section class="login_area p_100">
+<section class="login_area">
     <div class="container">
         <div class="login_inner">
             <div class="row">
