6 ready to deploy

--- a/templates/randint_generator/randint_generator.html
+++ b/templates/randint_generator/randint_generator.html
@@ -28,6 +28,7 @@ $(document).ready(function () {
         $.ajax({
             url: '',
             success: function (response) {
+                console.log(response.rand_number)
                 if (Number($('#my-number').text()) != response.rand_number) {
                     $('#my-number').text(response.rand_number);
                 }
